--- a/css/style.css
+++ b/css/style.css
@@ -57,12 +57,6 @@ div.row {
     background: white;
 }
 
-.clipper {
-    width: 50vw !important;
-    overflow-x: hidden;
-    overflow-y: hidden;
-}
-
 .section h1 {
     color: #0048ab;
     text-shadow: 1px 2px 0px rgba(0, 0, 0, .2);
@@ -312,7 +306,7 @@ button.navbar-toggle {
     opacity: .7;
     background-size: cover;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     top: 0vh;
 }
 
